feat: finalize demo-ready platform capabilities